google map support

--- a/app/src/main/res/layout/activity_order_deal_detail.xml
+++ b/app/src/main/res/layout/activity_order_deal_detail.xml
@@ -106,7 +106,7 @@
             android:background="#aaaaaa" />
 
         <LinearLayout
-            android:id="@+id/personmainShop"
+            android:id="@+id/personmainShop2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
@@ -132,7 +132,7 @@
             android:background="#aaaaaa" />
 
         <LinearLayout
-            android:id="@+id/personmainShop"
+            android:id="@+id/personmainShop3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
