--- a/app/src/main/res/layout/activity_deal_pay.xml
+++ b/app/src/main/res/layout/activity_deal_pay.xml
@@ -102,7 +102,7 @@
             android:background="#aaaaaa" />
 
         <LinearLayout
-            android:id="@+id/personmainShop"
+            android:id="@+id/personmainShop2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
@@ -128,7 +128,7 @@
             android:background="#aaaaaa" />
 
         <LinearLayout
-            android:id="@+id/personmainShop"
+            android:id="@+id/personmainShop3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
