--- a/app/src/main/res/layout/deal_item.xml
+++ b/app/src/main/res/layout/deal_item.xml
@@ -63,7 +63,7 @@
                 android:textColor="@color/text_blue"
                 android:textSize="23sp"/>
               <TextView
-                android:id="@+id/menu_price"
+                android:id="@+id/menu_price2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="left"
