1. add the help html 2. post & get exception

--- a/app/src/main/res/layout/setting_activity.xml
+++ b/app/src/main/res/layout/setting_activity.xml
@@ -283,18 +283,16 @@
         android:layout_margin="10dp">
 
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:text="@string/str_version"
             android:textSize="18sp"
             android:layout_marginLeft="5dp"
             android:layout_gravity="center_vertical" />
 
         <RelativeLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="50dp"
-            android:layout_weight="1"
             >
 
             <TextView
