--- a/app/src/main/res/layout/activity_location.xml
+++ b/app/src/main/res/layout/activity_location.xml
@@ -10,6 +10,16 @@
         android:layout_height="fill_parent"
         android:clickable="true" />
 
+    <Button
+        android:id="@+id/button1"
+        android:text="@string/str_current_position"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginRight="25dp"
+        android:layout_marginTop="10dip" />
+
 
     <LinearLayout
         android:layout_width="wrap_content"
