修改logo，应用名称   优化对话框 升级版本1.20.1

--- a/app/src/main/res/layout/activity_first.xml
+++ b/app/src/main/res/layout/activity_first.xml
@@ -1,12 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <ImageView android:id="@+id/open_img"
+    android:layout_height="match_parent"
+    android:background="#73bf1f">
+
+    <ImageView
+        android:id="@+id/open_img"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_centerInParent="true"
+        android:scaleType="centerCrop"
+        android:src="@drawable/ic_launcher" />
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:src="@drawable/welcome_bg"
-        android:scaleType="fitXY"
+        android:layout_marginTop="30dp"
+        android:gravity="center_horizontal"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/open_img"
+        android:textSize="18sp"
+        android:text="@string/welcome_name"
         />
-</LinearLayout>
+</RelativeLayout>
     
