--- a/app/src/main/res/layout/activity_shoplist.xml
+++ b/app/src/main/res/layout/activity_shoplist.xml
@@ -55,7 +55,7 @@
                 android:layout_gravity="center"
                 android:layout_marginLeft="5dp"
                 android:layout_marginStart="5dp"
-                android:text="@string/system_name"
+                android:text="@string/app_name"
                 android:textColor="#FFFFFFFF"
                 android:textSize="18sp" />
         </LinearLayout>
